--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaReu">
-        <activity android:name=".ui.meeting_list.AddMeeting"></activity>
         <activity android:name=".ui.meeting_list.ListMeeting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.meeting_list.AddMeeting"/>
+
     </application>
 
 </manifest>
